Use default font and CSS to align help commands - fixes #134 and fixes #67

--- a/package/bin/style.css
+++ b/package/bin/style.css
@@ -1,7 +1,6 @@
 body {
   color: #505053;
   font-size: 14px;
-  font-family: "Roboto";
   margin: 0;
 }
 
@@ -19,14 +18,15 @@ ul {
   padding: 0;
 }
 
+.help-command {
+  display: inline-block;
+  width: 7em;
+}
+
 .content-item {
   white-space: nowrap;
   overflow-x: hidden;
   text-overflow: ellipsis;
-}
-
-.monospace {
-  font-family: "monospace"
 }
 
 #main {
@@ -183,7 +183,6 @@ ul {
 #notice button {
   float: right;
   height: 22px;
-  font-family: "Roboto";
   font-size: 14px;
   padding: 0px 4px;
   margin: 4px;
@@ -344,7 +343,6 @@ ul {
   -webkit-box-shadow: 0px 0px 3px #888;
   color: #505053;
   font-size: 14px;
-  font-family: "Roboto";
   padding: 0px 8px;
   outline: 0;
 }
